--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,8 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "Sobre mi";
+
 const identity = {
   firstName: "Juan",
   country: "Colombia",
@@ -12,16 +15,29 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de do
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold"; //Negrita
+const textCase = "uppercase"; //Mayuscula
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill{
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
+  </head>
 	<body>
 		<body>
             <a href="/">Inicio</a>
@@ -41,7 +57,7 @@ const goal = 3;
             </ul>
             <p>Mis habilidades son:</p>
             <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
             </ul>
             {happy && <p>¡Estoy feliz de aprender Astro!</p>}
 
