--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,15 @@
 ---
 import '../styles/global.css';
+
+import Navigation from '../components/Navigation.astro';
+
+import Footer from '../components/Footer.astro';
+
+
 const pageTitle = "Pagina de Inicio"
 ---
 
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -12,9 +18,8 @@ const pageTitle = "Pagina de Inicio"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
-		<a href="/about/">Sobre mi</a>
-		<a href="/blog/">Blog</a>
-		<h1>Mi sitio Astro</h1>
+		<Navigation />
+		<h1>{pageTitle}</h1>
+		<Footer />
 	</body>
 </html>
