--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,8 @@
 ---
 ---
-<a href="/">Inicio</a>   
+<div class="nac-links">
+    <a href="/">Inicio</a>   
 <a href="/about/">Sobre mi</a>
 <a href="/blog/">Blog</a>
+</div>
+
