--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,14 @@
 ---
 import '../styles/global.css';
 
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Mi blog de Astro aprendizaje"
 ---
 
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -17,7 +17,7 @@ const pageTitle = "Mi blog de Astro aprendizaje"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>{pageTitle}</h1>
         <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
         <ul>
@@ -26,5 +26,8 @@ const pageTitle = "Mi blog de Astro aprendizaje"
             <li><a href="/posts/post-3/">Publicación 3</a></li>
           </ul>      
         <Footer />
+        <script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
