--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,27 +1,28 @@
-html{
+html {
     background-color: #f1f5f9;
     font-family: sans-serif;
-}
-
-body{
+  }
+  
+  body {
     margin: 0 auto;
     width: 100%;
     max-width: 80ch;
     padding: 1rem;
     line-height: 1.5;
-}
-
-*{
+  }
+  
+  * {
     box-sizing: border-box;
-}
-
-h1{
+  }
+  
+  h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
-}
-/* estila de barra de navegacion*/
-
-.hamburger {
+  }
+  
+  /* nav styles */
+  
+  .hamburger {
     padding-right: 20px;
     cursor: pointer;
   }
@@ -33,17 +34,17 @@ h1{
     margin-bottom: 10px;
     background-color: #ff9776;
   }
-
-.nav-links {
+  
+  .nav-links {
     width: 100%;
     top: 5rem;
     left: 48px;
     background-color: #ff9776;
     display: none;
     margin: 0;
-}
-
-.nav-links a {
+  }
+  
+  .nav-links a {
     display: block;
     text-align: center;
     padding: 10px 0;
@@ -51,32 +52,41 @@ h1{
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
-}
-
-.nav-links a:hover,
-.nav-links a:focus{
+  }
+  
+  .nav-links a:hover,
+  .nav-links a:focus {
     background-color: #ff9776;
-}
-
-.expanded{
+  }
+  
+  .expanded {
     display: unset;
-}
-
-@media screen and (min-width: 636px) {
-    .nav-links{
-        margin-left: 5em;
-        display: block;
-        position: static;
-        width: auto;
-        background: none;
+  }
+  
+  @media screen and (min-width: 636px) {
+    .nav-links {
+      margin-left: 5em;
+      display: block;
+      position: static;
+      width: auto;
+      background: none;
     }
-
-    .nav-links a{
-        display: inline-block;
-        padding: 15px 20px;
+  
+    .nav-links a {
+      display: inline-block;
+      padding: 15px 20px;
     }
-}
-
-.hamburger {
-    display: none;
+  
+    .hamburger {
+      display: none;
+    }
+  }
+  
+  html.dark {
+    background-color: #0d0950;
+    color: #fff;
+  }
+  
+  .dark .nav-links a {
+    color: #fff;
   }
