--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,8 @@
 ---
 <div class="nac-links">
     <a href="/">Inicio</a>   
-<a href="/about/">Sobre mi</a>
-<a href="/blog/">Blog</a>
+    <a href="/about/">Sobre mi</a>
+    <a href="/blog/">Blog</a>
+    <a href="/tags/">Etiquetas</a>
 </div>
 
