--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<div class="nac-links">
+<div class="nav-links">
     <a href="/">Inicio</a>   
     <a href="/about/">Sobre mi</a>
     <a href="/blog/">Blog</a>
